# genomake

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
Docs/: _quarto.yml  get_started.qmd  objects.json
docs/: cli.html  get_started.html  index.html  search.json
docs/reference/: index.html  pipelines.chromake.html  pipelines.chromake.scripts.config.check_config_format.html  pipelines.chromake.scripts.config.check_project_and_sequencing.html  pipelines.chromake.scripts.config.check_sample_files_exist.html  pipelines.chromake.scripts.config.create_config_from_table.html  pipelines.chromake.scripts.config.create_example_config.html  pipelines.chromake.scripts.config.create_samplesheet_from_config.html  pipelines.chromake.scripts.config.html  pipelines.chromake.scripts.config.remove_samples.html  pipelines.chromake.scripts.config.remove_sequencing.html  pipelines.chromake.scripts.config.update_jobs.html  pipelines.chromake.scripts.paths.get_all_fastq_related_paths.html  pipelines.chromake.scripts.paths.get_all_sequencings_related_paths.html  pipelines.chromake.scripts.paths.get_project_paths_for_macs.html  pipelines.chromake.scripts.paths.get_project_paths_for_macs3.html  pipelines.chromake.scripts.paths.get_sequencing_fastq_related_paths.html  pipelines.chromake.scripts.paths.get_sequencings_related_paths.html  pipelines.chromake.scripts.paths.html
docs_source/: _quarto.yml  cli.qmd  get_started.qmd  index.qmd  objects.json
docs_tmp/: objects.json  styles.css
docs_tmp/_site/: get_started.html  search.json
docs_tmp/reference/: _sidebar.yml  index.qmd  pipelines.chromake.qmd  pipelines.chromake.scripts.config.check_config_format.qmd  (+12 more)
src/genomake/: __init__.py  (+2 more)
(+26 files in other folders)
