[project]
name = "genomake"
version = "0.1.0"
description = "Scripts for analysis of genomic data."
authors = [
    {name = "Pierre Solomon",email = "pierre.solomon3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "snakemake (>=9.14.5,<10.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
genomake = "genomake.cli:main"


# pip / setuptools config
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
packages = [{include = "genomake", from = "src"}]
include = [
    "pipelines/chromake/Snakefile"
]